<resources>
    <string name="app_name">MyApp</string>
    <string name="Hello_World">Here is may new hello</string>
    <string name="button" translatable="false">Update</string>
    <string name="send" translatable="false">Send Message</string>
    <string name="message" translatable="false">Your message...</string>
    <string name="BritishLibrary" translatable="false">British Library</string>
    <string name="stopClock" translatable="false"> Stop Clock</string>
    <string name="edit_text_name" translatable="false">Edit Borrower</string>
    <string name="name_TextView" translatable="false">BorrowerID</string>
    <string name="button_name" translatable="false">Set Borrower ID</string>
    <string name="options" translatable="false">Options</string>
    <string name="home" translatable="false">Home</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="about" translatable="false">About</string>
    <string name="i_am_some_options_label" translatable="false">I am some options label!</string>

...
        <item>There are many ways to say Hello!</item>
        <item>Everyone around the world Hello!</item>
    </string-array>

    <string name="edit_message" translatable="false">Enter a message</string>
    <string name="button_send" translatable="false">Send</string>
    <string name="stopclock" translatable="false">StopClock</string>
    <string name="top_level_entry" translatable="false">Top_level_entry</string>
    <string name="message_display">Messaging Button</string>

</resources>
