...
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
...
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop" />

    <Button
        android:id="@+id/start"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:onClick="timerStart"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="timerStop"
        android:text="Stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

...
