...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="151dp"
...
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:onClick="onSendMessage"
            android:text="@string/send"
            app:layout_constraintBottom_toTopOf="@+id/britishLibrary"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopClock"
            android:layout_width="163dp"
            android:layout_height="0dp"
...
